--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,10 @@
 	<properties>
 		<maven.compiler.target>11</maven.compiler.target>
 		<maven.compiler.source>11</maven.compiler.source>
+		<exec.mainClass>gsonMaven.Main</exec.mainClass>
+
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
@@ -19,5 +21,5 @@
 			<version>2.8.5</version>
 		</dependency>
 	</dependencies>
-	
+
 </project>
